tests/invalid/runtime/module_noinit.pts
import test.noinit.{ping};

function main() : void {
    ping();
}
